# tfmctsqo

./: .gitignore  .gitmodules  LICENSE  README.md  run_hyperqo_job.sh  run_hyperqo_job_complex.sh  setup_tpch.sh
ablation/: README.md  app.py  baseline_dp.sql  baseline_geqo.sql  drop_caches.sh  lib.py  mcts_luby.sql  mcts_single.sql  mcts_slices.py  plot.py  pyproject.toml  run.sh  setup.cfg  sharing.py  sweep.py
ablation/configs/: bench_ceb_rel9_seed42_200.toml  ceb_saiovsii.toml  job_full.toml  job_geqo.toml  job_jobcomplex_full.toml  job_jobcomplex_geqo.toml  jobcomplex_full.toml  jobcomplex_geqo.toml  tpch_full.toml  tpch_geqo.toml
ablation/tests/: test_lib.py
mcts_extreme/: Makefile  README.md  mcts_extreme--1.0.sql  mcts_extreme.control
mcts_extreme/core/: mcts_extreme.c
mcts_extreme/docs/: mcts.md
mcts_extreme/expected/: basic.out
mcts_extreme/mcts/: local_search.c  mcts.c  mcts_internal.h  mcts_trace.h  trace.c
mcts_extreme/sql/: basic.sql
plots/: README.md  gen_results.py  gen_stats.py  stats.json
plots/figures/: results_numbers.json
runs/CEB/: README.md  config.json  luby.sql  luby__tk10.sql  luby__tk11.sql  luby__tk12.sql  luby__tk8.sql  luby__tk9.sql  results.jsonl  single.sql  single__k2.sql  single__k3.sql  single__tk10.sql  single__tk11.sql  single__tk12.sql  single__tk8.sql  single__tk9.sql
runs/CEB-SAIOvsII/: README.md  config.json  geqo.sql  results.jsonl  single__iter_improve_single_kernel_480.sql  single__saio_single_kernel_480.sql
runs/JOB-JOBComplex/: README.md  config.json  dp.sql  results.jsonl
source/: README.md  job_complex_test.sh  job_test.sh
source/resource/imdb-ceb/: README.md
(+10349 files in other folders)
