[project]
name = "mcts-ablation"
version = "0.1.0"
description = "Streamlit UI + sweep runner for the mcts_extreme PostgreSQL planner extension."
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.30",
    "plotly>=5.20",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "openpyxl>=3.1",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "wemake-python-styleguide>=0.19",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["configs", "__pycache__", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "SIM", "UP", "N", "PLE", "RUF"]
# E501:  line length — wemake's WPS320 handles this with the project's caps.
# E731:  short inline lambdas are clearer than named fns in Streamlit code.
# N806/803: Streamlit widget vars come back camelCase / Title-Cased.
# SIM108: if/else is often clearer than ternary in Streamlit branches.
# RUF001/2/3: `×`, `–`, `−` in our text are intentional, not look-alikes.
ignore = ["E501", "E731", "N806", "N803", "SIM108", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
# E402:    each module adjusts sys.path before importing local siblings.
# SIM115:  Popen's stdout handle must outlive a `with` block.
# SLF001:  sharing.py reaches into lib's private regex by design.
"app.py"     = ["E402", "SIM115"]
"sweep.py"   = ["E402"]
"sharing.py" = ["E402", "SLF001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["lib", "sweep", "sharing"]
